# greenwave_monitor

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Contributing.md  README.md
.github/workflows/: basic-test.yml  debian-packages.yml  ros-tests.yml  smoke-tests.yml
docs/: DESIGN_AND_IMPLEMENTATION.md
docs/images/: SERVICES.md
greenwave_monitor/: CHANGELOG.rst  CMakeLists.txt  package.xml
greenwave_monitor/config/: example.yaml  type_registry.yml
greenwave_monitor/examples/: EXAMPLES.md  README.md  example.launch.py
greenwave_monitor/greenwave_monitor/: ncurses_frontend.py  test_utils.py  ui_adaptor.py
greenwave_monitor/include/: greenwave_diagnostics.hpp  greenwave_monitor.hpp  message_diagnostics.hpp  minimal_publisher_node.hpp
greenwave_monitor/launch/: hz.launch.py  test_publishers.launch.py
greenwave_monitor/scripts/: ncurses_dashboard  r2s_gw_dashboard
greenwave_monitor/src/: greenwave_monitor.cpp  (+4 more)
greenwave_monitor_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
r2s_gw/: README.md  package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py
r2s_gw/.github/workflows/: black_format.yml
r2s_gw/r2s_gw/: main.py  ui.py
r2s_gw/r2s_gw/screens/: main_screen.py
r2s_gw/r2s_gw/screens/colcon/: package_list.py
r2s_gw/r2s_gw/screens/ros2/: get_node.py  header.py  interfaces.py  nodes.py  topics.py
r2s_gw/r2s_gw/widgets/data_grid/: __init__.py
r2s_gw/r2s_gw/widgets/header/: __init__.py
r2s_gw/r2s_gw/widgets/log_view/: __init__.py
scripts/: build_debian_packages.sh  docker-test.sh
(+19 files in other folders)
