<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2s_gw</name>
  <version>0.1.0</version>
  <description>A TUI for ROS 2</description>
  <maintainer email="sgillen@nvidia.com">Sean Gillen</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>python3-setuptools</buildtool_depend>

  <depend>greenwave_monitor_interfaces</depend>
  <depend>greenwave_monitor</depend>
  <!-- TODO: Update debian package dependencies when available -->

  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>python3-distro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
